--- a/Newman/Base.lproj/Main.storyboard
+++ b/Newman/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="ipad12_9" orientation="landscape">
+    <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,21 +15,21 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="NewmanFormViewController" customModule="Newman" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="1366" height="1024"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9nF-8V-n0F">
-                                <rect key="frame" x="0.0" y="20" width="1366" height="100"/>
+                                <rect key="frame" x="0.0" y="44" width="375" height="100"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="Z2L-CL-Z1w"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ODc-Z9-gFf">
-                                <rect key="frame" x="0.0" y="924" width="1366" height="100"/>
+                                <rect key="frame" x="0.0" y="678" width="375" height="100"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oHU-ZQ-WLR">
-                                        <rect key="frame" x="667" y="35" width="32" height="30"/>
+                                        <rect key="frame" x="171.66666666666666" y="35" width="32" height="30"/>
                                         <state key="normal" title="Next"/>
                                         <connections>
                                             <action selector="nextPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Dj3-aJ-Xuf"/>
@@ -44,10 +44,10 @@
                                 </constraints>
                             </view>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="q2T-93-rUQ">
-                                <rect key="frame" x="50" y="120" width="1266" height="804"/>
+                                <rect key="frame" x="50" y="120" width="275" height="804"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="a7M-HI-6iI">
-                                        <rect key="frame" x="0.0" y="201" width="1266" height="200"/>
+                                        <rect key="frame" x="0.0" y="201" width="275" height="200"/>
                                     </stackView>
                                 </subviews>
                                 <constraints>
@@ -88,14 +88,14 @@
             <objects>
                 <viewController id="a3X-Le-ACw" customClass="QuotationViewController" customModule="Newman" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="gKS-Xl-lPE">
-                        <rect key="frame" x="0.0" y="0.0" width="1366" height="1024"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QVs-WS-xaA">
-                                <rect key="frame" x="0.0" y="924" width="1366" height="100"/>
+                                <rect key="frame" x="0.0" y="678" width="375" height="100"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="zko-6C-BrA">
-                                        <rect key="frame" x="601" y="0.0" width="164" height="100"/>
+                                        <rect key="frame" x="105.66666666666669" y="0.0" width="164" height="100"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RV2-Wd-yrD">
                                                 <rect key="frame" x="0.0" y="0.0" width="34" height="100"/>
@@ -105,7 +105,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cFA-Bu-giQ">
-                                                <rect key="frame" x="84" y="0.0" width="80" height="100"/>
+                                                <rect key="frame" x="83.999999999999986" y="0.0" width="80.000000000000014" height="100"/>
                                                 <state key="normal" title="View Terms"/>
                                             </button>
                                         </subviews>
@@ -119,7 +119,7 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bdJ-tg-Byh">
-                                <rect key="frame" x="0.0" y="20" width="1366" height="100"/>
+                                <rect key="frame" x="0.0" y="44" width="375" height="100"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="Pyh-jX-4lo"/>
@@ -151,14 +151,14 @@
             <objects>
                 <viewController id="cOO-Y6-kTH" customClass="TermsAndConditionsViewController" customModule="Newman" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3KA-r1-i57">
-                        <rect key="frame" x="0.0" y="0.0" width="1366" height="1024"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WOt-9U-j0h">
-                                <rect key="frame" x="0.0" y="924" width="1366" height="100"/>
+                                <rect key="frame" x="0.0" y="678" width="375" height="100"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="WO8-di-vtT">
-                                        <rect key="frame" x="593.5" y="0.0" width="179" height="100"/>
+                                        <rect key="frame" x="98.333333333333314" y="0.0" width="179" height="100"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zs7-Lt-X7c">
                                                 <rect key="frame" x="0.0" y="0.0" width="34" height="100"/>
