--- a/Newman/Base.lproj/Main.storyboard
+++ b/Newman/Base.lproj/Main.storyboard
@@ -20,8 +20,18 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9nF-8V-n0F">
                                 <rect key="frame" x="0.0" y="44" width="375" height="100"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="newmanlogo" translatesAutoresizingMaskIntoConstraints="NO" id="Whv-Re-4Pn">
+                                        <rect key="frame" x="10" y="-23" width="200" height="147"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="200" id="diZ-nv-fvZ"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
+                                    <constraint firstItem="Whv-Re-4Pn" firstAttribute="leading" secondItem="9nF-8V-n0F" secondAttribute="leading" constant="10" id="8Ep-im-PxB"/>
+                                    <constraint firstItem="Whv-Re-4Pn" firstAttribute="centerY" secondItem="9nF-8V-n0F" secondAttribute="centerY" id="D0e-7w-E1n"/>
                                     <constraint firstAttribute="height" constant="100" id="Z2L-CL-Z1w"/>
                                 </constraints>
                             </view>
@@ -82,7 +92,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="28.98975109809663" y="133.59375"/>
+            <point key="canvasLocation" x="28" y="133.00492610837438"/>
         </scene>
         <!--Quotation View Controller-->
         <scene sceneID="hNa-HF-3QY">
@@ -121,9 +131,19 @@
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bdJ-tg-Byh">
                                 <rect key="frame" x="0.0" y="44" width="375" height="100"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="newmanlogo" translatesAutoresizingMaskIntoConstraints="NO" id="OfZ-ZJ-av4">
+                                        <rect key="frame" x="10" y="-24" width="200" height="147"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="200" id="Q42-Yf-6Lw"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="Pyh-jX-4lo"/>
+                                    <constraint firstItem="OfZ-ZJ-av4" firstAttribute="centerY" secondItem="bdJ-tg-Byh" secondAttribute="centerY" id="Zuf-MV-jL4"/>
+                                    <constraint firstItem="OfZ-ZJ-av4" firstAttribute="leading" secondItem="bdJ-tg-Byh" secondAttribute="leading" constant="10" id="z2a-cx-Sid"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -195,4 +215,7 @@
             <point key="canvasLocation" x="1380" y="129"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="newmanlogo" width="547" height="147"/>
+    </resources>
 </document>
